
(library
 (name InferBase)
 (public_name InferBase)
 (flags (-g -short-paths -safe-string -principal -strict-formats -strict-sequence -bin-annot -w +3+5+6+8+10+11+12+14+18+19+20+21+23+26+29+27+28+32+33+34+35+37+38+39+50+52+57+60-4-9-40-41-42-45-48 -open Core -open InferStdlib -open IStd -open InferGenerated))
 (ocamlopt_flags ())
 (libraries InferStdlib InferGenerated javalib sawja ANSITerminal apron apron.octMPQ async atdgen base base64 cmdliner core elina mtime.clock.os ocamlgraph oUnit parmap sqlite3 str unix xmlm yojson zarith zip)
 (preprocess (pps ppx_compare))
)

(documentation
 (package InferBase)
 (mld_files index)
)
