
(library
 (name InferGenerated)
 (public_name InferGenerated)
 (flags (-warn-error +3+5+6+8+10+11+12+14+18+19+20+21+23+26+29+27+28+32+33+34+35+37+38+39+50+52+57+60 -g -short-paths -safe-string -principal -strict-formats -strict-sequence -bin-annot -w +3+5+6+8+10+11+12+14+18+19+20+21+23+26+29+27+28+32+33+34+35+37+38+39+50+52+57+60-4-9-40-41-42-45-48 -w -27-32-34-35-39))
 (ocamlopt_flags ())
 (libraries atdgen core)
 (preprocess (pps ppx_compare))
)

(documentation
 (package InferGenerated)
 (mld_files index)
)
